19-gateway-api-kubernetes/gatewayclass.yml
apiVersion: gateway.networking.k8s.io/v1 
kind: GatewayClass
metadata:
 name: eg
spec:
 controllerName: gateway.envoyproxy.io/gatewayclass-controller
