19-gateway-api-kubernetes/backend-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
 name: backend
spec:
 replicas: 2
 selector:
  matchLabels:
   app: backend
 template:
  metadata:
   labels:
    app: backend
  spec:
    containers:
     - name: backend
       image: nginx
       command: ["/bin/sh"]
       args:
        - -c
        -  |
            cat > /etc/nginx/conf.d/default.conf <<'EOF'
              server {
                  listen 80;

                  location = /api {
                      default_type text/plain;
                      return 200 "BACKEND APP\n";
                  }

                  location / {
                      root /usr/share/nginx/html;
                      index index.html;
                  }
              }
            EOF
            echo "BACKEND APP" > /usr/share/nginx/html/index.html
            nginx -g 'daemon off;'       
       ports:
        - containerPort: 80
