19-gateway-api-kubernetes/gateway.yml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
 name: eg
spec:
 gatewayClassName: eg
 listeners:
  - name: http
    protocol: HTTP
    port: 80
    hostname: shubhamgour.com
