19-gateway-api-kubernetes/annotation-ingress.yml
apiVersion: networking.k8s.io/v1 
kind: Ingress
metadata:
 name: application-ingress
 annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
 ingressClassName: nginx
 rules:
  - host: shubhamgour.com
    http:
     paths:
      - path: /api(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
         service:
          name: backend-service
          port:
           number: 80
