19-gateway-api-kubernetes/httproute.yml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
 name: frontend-route
spec:
 parentRefs:
  - name: eg

 hostnames:
   - shubhamgour.com
 rules:
  - matches:
     - path: 
        type: PathPrefix
        value: /api
    backendRefs:
     - name: backend-service
       port: 80
  - matches:
     - path: 
        type: PathPrefix
        value: /
    backendRefs:
     - name: frontend-service
       port: 80
